# pitch-shifter-audio-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  PitchShifter.jucer  README.md  plugin.cfg
CMake/: SetSourceFiles.cmake  SubProjectVersion.cmake
Libraries/rubberband/single/: CMakeLists.txt
Scripts/: build_vs22.bat  build_xcode.sh
Scripts/macOS/: build_xcode.sh  formatter.sh  testing.sh  validate.sh
Scripts/windows/: build_vs22.bat  formatter.bat  testing.bat  validate.bat
Source/: CMakeLists.txt  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Dysomni/: DysomniPitchShifter.cpp  DysomniPitchShifter.h  PitchDelay.cpp  PitchDelay.h  PitchShifter.cpp  PitchShifter.h
Source/JuriHock/: Chronometer.h  Core.cpp  Core.h  FFT.h  StftPitchShifter.cpp  StftPitchShifter.h
Source/JuriHock/Core/: DelayedCore.cpp  DelayedCore.h  InstantCore.cpp  InstantCore.h
Source/JuriHock/FFT/: PocketFFT.h  RealFFT.h
Source/JuriHock/pocketfft/: pocketfft.c  pocketfft.h
Source/JuriHock/stftPitchShift/: Arctangent.h  CLI.h  Cepster.h  Dump.h  ETC.h  FFT.h  IO.cpp  IO.h  Normalizer.h  Pitcher.h  RFFT.h  Resampler.h  STFT.h  StftPitchShift.cpp  StftPitchShift.h  StftPitchShiftCore.h  Timer.h  Version.h  Vocoder.h  main.cpp  wasm.cpp
Source/JuriHock/stftPitchShift/dr_libs/: dr_wav.h
Source/McPherson/: McPhersonPitchShifter.cpp  McPhersonPitchShifter.h
Source/MineRubberband/: MineRubberbandPitchShifter.cpp  MineRubberbandPitchShifter.h
Source/PhaseVocoder/: Shifter.cpp  Shifter.h  stft.cpp
Source/Rubberband/: RingBufferMine.h  RubberBandPitchShifter.h
Source/Townley/: Phasor.cpp  Phasor.h  TownleyPitchShifter.cpp  TownleyPitchShifter.h
Source/WangPhaseVocoder/: WangVocoderPitchShifter.cpp  WangVocoderPitchShifter.h
Source/WangPhaseVocoder/Vocoder/: BlockCircularBuffer.h  PhaseVocoder.h  PitchShifter.h  Resample.h
Source/WangRubberband/: RingBufferMine.h  WangRubberBandPitchShifter.h
Source/WangSoundTouch/: RingBufferForST.h  WangSoundTouchPitchShifter.h
Source/WangSoundTouch/SoundTouch/: AAFilter.cpp  AAFilter.h  BPMDetect.cpp  BPMDetect.h  FIFOSampleBuffer.cpp  FIFOSampleBuffer.h  FIFOSamplePipe.h  FIRFilter.cpp  FIRFilter.h  InterpolateCubic.cpp  InterpolateCubic.h  InterpolateLinear.cpp  InterpolateLinear.h  InterpolateShannon.cpp  InterpolateShannon.h  PeakFinder.cpp  PeakFinder.h  RateTransposer.cpp  RateTransposer.h  STTypes.h  SoundTouch.cpp  SoundTouch.h  TDStretch.cpp  TDStretch.h  cpu_detect.h  cpu_detect_x86.cpp  mmx_optimized.cpp  sse_optimized.cpp
Source/WubVocoder/: PitchShifter.cpp  PitchShifter.h  WubPitchShifter.cpp  WubPitchShifter.h  istft.cpp  istft.h  stft.cpp  stft.h
